--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@ h1 {
 /* main IMG*/
 
 figure {
+    width: 100%;
     margin-left: 0;
+    margin-right: 0;
 }
 
 figure img {
-    height: 400px;
+    height: 500px;
     width: auto;
 }
 
@@ -118,5 +120,5 @@ thead {
 /* FOOTER */
 
 footer p {
-    padding-left: 15px;
+    padding: 15px;
 }
